crates/oxc_css/tests/error/at-rule/keyframes/out-of-keyframes-at-rule.snap
---
source: crates/oxc_css/tests/error.rs
---
error: CSS rule is expected
  ┌─ out-of-keyframes-at-rule.css:1:1
  │
1 │ 0% {}
  │ ^^


